objects/Stage_Work_Element__c.object
<CustomObject>
    <fields>
        <fullName>Accountable_Process_Role_Name__c</fullName>
        <formula>Accountable_Role__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountable Process Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountable_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Accountable Process Role Id</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Work Elements</relationshipLabel>
        <relationshipName>Stage_Work_Elements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountable_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountable Team Member</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipName>Stage_Work_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountable_User__c</fullName>
        <formula>Accountable_Team_Member__r.User__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountable User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribute_Due_Date__c</fullName>
        <description>The Contribute Due Date formula calculates the data all contributions should be completed by</description>
        <formula>IF( Review_Required__c = TRUE,  Review_Due_Date__c -  Days_To_Review__c ,  Release_Stage_ID__r.Current_Baseline_End_Date__c - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribute Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_To_Review__c</fullName>
        <label>Days To Review</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>Release_Deliverable_ID__r.Deliverable_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Text_Area__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help_Description__c</fullName>
        <label>Help Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <formula>IF(Release_Stage_ID__r.Include__c  = TRUE &amp;&amp;  Release_Deliverable_ID__r.Include__c = TRUE ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Deliverable_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deliverable ID</label>
        <referenceTo>Release_Deliverable__c</referenceTo>
        <relationshipLabel>Work Elements</relationshipLabel>
        <relationshipName>Stage_Work_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Release_Stage_ID__r.Release_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Stage_ID__c</fullName>
        <label>Stage ID</label>
        <referenceTo>Release_Stage__c</referenceTo>
        <relationshipName>Stage_Work_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Review_Due_Date__c</fullName>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Release_Stage_ID__r.Stage_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Successor_Work_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Successor Work Element</label>
        <referenceTo>Stage_Work_Element__c</referenceTo>
        <relationshipLabel>Work Elements</relationshipLabel>
        <relationshipName>Work_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Element_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Work Element ID</label>
        <referenceTo>Work_Element__c</referenceTo>
        <relationshipLabel>Work Elements</relationshipLabel>
        <relationshipName>Stage_Work_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Element_Name__c</fullName>
        <formula>Work_Element_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Work Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Instructions__c</fullName>
        <label>Work Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Work Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WE-{0000000000}</displayFormat>
        <label>Work Element ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ODP_VR_AccountableTM_SameOF</fullName>
        <active>true</active>
        <description>accountable team member must come from the current offering release</description>
        <errorConditionFormula>AND( ISNULL(Accountable_Team_Member__c), Release_Stage_ID__r.Offering_Release_ID__c   &lt;&gt; Accountable_Team_Member__r.Release_Role__r.Offering_Release__c )</errorConditionFormula>
        <errorDisplayField>Accountable_Team_Member__c</errorDisplayField>
        <errorMessage>the accountable team member is not from the current offering release</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ODP_VR_AccountableTM_SameRule</fullName>
        <active>true</active>
        <description>accountable team member must follow the accountable role</description>
        <errorConditionFormula>AND( ISNULL(Accountable_Team_Member__c), Accountable_Team_Member__r.Release_Role__r.Role_ID__c &lt;&gt;   Accountable_Role__c )</errorConditionFormula>
        <errorDisplayField>Accountable_Team_Member__c</errorDisplayField>
        <errorMessage>the accountable team member&apos;s role must follow the accountable role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ODP_VR_Deliverable_MustActive</fullName>
        <active>false</active>
        <description>the deliverable must have be include</description>
        <errorConditionFormula>Release_Deliverable_ID__r.Include__c  = False</errorConditionFormula>
        <errorMessage>for create or update work element, its deliverable must be included in the project.</errorMessage>
    </validationRules>
</CustomObject>